--- a/encriptador/index.html
+++ b/encriptador/index.html
@@ -31,8 +31,11 @@
             oninput="replicarTexto()"
           /> -->
 
-          <textarea id="text-input" placeholder="Digite aqui..." oninput="replicarTexto()"></textarea>
-
+          <textarea
+            id="text-input"
+            placeholder="Digite aqui..."
+            oninput="replicarTexto()"
+          ></textarea>
         </div>
 
         <div class="actions-user">
@@ -64,8 +67,26 @@
     </main>
 
     <footer>
+      <h2>Feito por El Castillo</h2>
       <div class="aboutme">
-        <h2>Feito por El Castillo</h2>
+        <a
+          href="https://www.linkedin.com/in/guilherme-castilho/"
+          target="_blank"
+        >
+          <img
+            id="linkedin"
+            src="imgs/icons8-linkedin.gif"
+            alt="logo-linkedin"
+          />
+        </a>
+        <a href="https://github.com/GuilhermeCastillo" target="_blank">
+          <img
+            id="github"
+            src="imgs/icons8-github.gif"
+            alt="logo-github"
+            width="22px"
+          />
+        </a>
       </div>
     </footer>
 
