--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Encriptador</title>
+    <title>Encriptador by Castillo</title>
   </head>
   <body>
     <main class="content-user">
